<resources>
    <string name="app_name">Bali Quiz App</string>
    <string name="question_text">Placeholder for first question</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="hint_button">Hint</string>
    <string name="check_button">Check</string>
    <string name="cheat_button">Cheat!</string>
    <string name="score_text">Score</string>
    <string name="cheated_text">Cheaters Never Win!</string>

    <string name="score_value"></string>

    <string name="question_1">Does "Inggih" mean "Yes" in Balinese?</string>
    <string name="question_2">Does "Sing" mean "No" In Balinese?</string>
    <string name="question_3">What is the Capital of Indonesia?</string>
    <string name="question_4">What Religion do most Indonesians Practice?</string>
    <string name="question_5">Balinese predominantly practice Islam</string>
    <string name="question_6">Bali is a part of Indonesia</string>
    <string name="question_7">The Capital of Bali is Mas</string>
    <string name="question_8">The Capital of Bali is Denpasar</string>

    <string name="hint_1">Yes</string>
    <string name="hint_2">Yes</string>
    <string name="hint_3">It is also the Largest City</string>
    <string name="hint_4">They have to pray 3x a day</string>
    <string name="hint_5">No</string>
    <string name="hint_6">Yes</string>
    <string name="hint_7">No</string>
    <string name="hint_8">Yes</string>

    <string name="cheat_warning">Are you sure you want to Cheat? Cheaters never win...</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="final_text_view">Congratulations you have Finished the Test</string>
    <string name="final_score_view">Your Final Score:</string>

    <string-array name="question_3_answers">
        <item>Jakarta</item>
        <item>Ja kar ta</item>
    </string-array>

    <string-array name="question_4_options">
        <item>Hinduism</item>
        <item>Buddhism</item>
        <item>Christianity</item>
        <item>Islam</item>
    </string-array>


</resources>
